# BPL

./: .cproject  .project  CMakeLists.txt  README.md  ReleaseNotes.md
doc/: CMakeLists.txt
doc/doc/: CMakeLists.txt  MemoryTree.odt
doc/doc/design/: BplDesign.tex
doc/doc/userguide/: .gitignore  BplUserGuide.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  intro.tex
doc/doc/userguide/images/: .gitignore
doc/doxygen/: bpl.doxyfile
doc/misc/: ideas.txt
doc/slides/: .gitignore  BPL_Bank.odp  BPL_GlobalVariables.odp  BPL_LibraryInTheMaking.odp  BPL_PreliminaryIdeas.odp  BPL_ShortPresentation_v1.odp  BPL_ShortPresentation_v2.odp  BPL_SplitProcess.odp  BPL_Vector.odp  BPL_argument_modifier.odp  BPL_mash.odp  BPL_misc.odp
export/: .gitignore  CMakeLists.txt  README.md
export/checksum/: CMakeLists.txt  README.md
export/checksum/src/main/: main.cpp
export/checksum/src/tasks/: CMakeLists.txt  Checksum.hpp
export/helloworld/: CMakeLists.txt  README.md
export/helloworld/src/: CMakeLists.txt
export/helloworld/src/main/: CMakeLists.txt  main.cpp
export/helloworld/src/tasks/: CMakeLists.txt  DoSomething.hpp  HelloWorld.hpp
export/newproject/: CMakeLists.txt.in  README.md.in
export/newproject/src/: CMakeLists.txt
export/newproject/src/main/: CMakeLists.txt  main.cpp.in
export/newproject/src/tasks/: newproject.hpp.in
scripts/: AddBannerAsHeader.py  FindDefaultIncludes.py  banner4cmake.txt  banner4cpp.txt
src/: firstinclude.hpp  traces.hpp
src/bpl/: bpl.hpp
src/bpl/arch/: Arch.hpp  ArchDummy.hpp  ArchMulticore.hpp  ArchMulticoreResources.hpp  ArchUpmem.hpp  ArchUpmem.pri  ArchUpmemConfig.hpp.in  ArchUpmemMetadata.hpp  ArchUpmemResources.hpp
src/bpl/arch/dpu/: ArchUpmem.dpu.A.cpp.in  ArchUpmemMRAM.hpp
src/bpl/bank/: BankChunk.hpp  BankFasta.hpp  BankRandom.hpp  Sequence.hpp
src/bpl/core/: Error.hpp  Exception.hpp  Launcher.hpp  LauncherPool.hpp  Task.hpp
src/bpl/utils/: BufferIterator.hpp  FileUtils.hpp  GetSizeGlobalParameters.cpp.in  MemoryTree.hpp  MergeUtils.hpp  RandomUtils.hpp  Range.hpp  RangeInt.hpp  Reducer.hpp  Shared.hpp  Statistics.hpp  TaskUnit.hpp  TimeUtils.hpp  char_sequence.hpp  getname.hpp  global.hpp  lfsr.hpp  metaprog.hpp  reduce.hpp  serialize.hpp  split.hpp  splitter.hpp  std.hpp  tag.hpp  vector.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/host/: CMakeLists.txt  benchmark.hpp  common.hpp  main.cpp
test/benchmark/notebooks/: .gitignore  1.Benchmark.ipynb
test/benchmark/notebooks/traces/: traces_5e9aa34cb186be65e231bd35070a10b6ee88ddf4.txt  traces_7ab5a7a9f42755f12a8be0e0d8ff9dd77c1a17cd.txt  traces_8267c640f6b8e06739912a98b8e0793bed406ed5.txt  traces_a2ffb4a.txt  traces_bc47b62f2a47fd6bd19ccbf9fb65ab71ffc9d611.txt  traces_e63cd66f52f1e4d1af680f8f1a22029d0d84d0f2.txt
test/benchmark/syracuse/: benchmark.cpp
test/benchmark/syracuse/tasks/: Benchmark1.hpp  Benchmark2.hpp  Syracuse.hpp
test/benchmark/vector/: CMakeLists.txt
test/benchmark/vector/results/: iterate.uint32_t.csv  write.uint64_t.csv
test/unit/: CMakeLists.txt
test/unit/host/: CMakeLists.txt  Runner.hpp  TestArch.cpp  TestArchUpmem.cpp  TestBank.cpp  TestLauncher.cpp  TestMemoryTree.cpp  TestMetaprog.cpp  TestMisc.cpp  TestSerialize.cpp  TestSketch.cpp  TestSort.cpp  TestSpan.cpp  TestSplit.cpp  TestSynchro.cpp  TestVector.cpp  common.hpp  main.cpp
test/unit/results/: result_25de7fe6f932ba65eadb1f8e33e891a5489575f0.txt  result_775404730aa59a016f2ffe99431b72b7638a4aaa.txt  result_780b6c11a8aa2630a6882f7dc42185c7506bf167.txt  result_90a22a2ccaa1a8b0b87b40afcec6c8a0d8be2700.txt
test/unit/tasks/: .gitignore  Array1.hpp  Array2.hpp  Bank1.hpp  Bank2.hpp  Bank3.hpp  Bank4.hpp  Bank5.hpp  CMakeLists.txt  Checksum1.hpp  Checksum2.hpp  Checksum3.hpp  Checksum4.hpp  Checksum5.hpp  Compare1.hpp  Compare2.hpp  CountInstances.hpp  DoSomething.hpp  Exception1.hpp  Exception2.hpp  GetPuid.hpp  Global0.hpp  Global1.hpp  Global2.hpp  Global3.hpp  Global4.hpp  Global5.hpp  Global6.hpp  GlobalOnce1.hpp  GlobalOnce2.hpp  GlobalOnce3.hpp  GlobalOnce4.hpp  HelloWorld.hpp  IntegerType.hpp  IterableSplit.hpp  IterateMultipleVectors.hpp  LauncherPool1.hpp  Max.hpp  Min.hpp  Mutex1.hpp  (+94 more)
test/xp/dbg1/: build.sh  dpu.c  host.c  readme.md
test/xp/stdvector/: build.sh  dpu.cpp  host.cpp
test/xp/syracuse/: CMakeLists.txt
test/xp/syracuse/tasks/: Benchmark1.hpp  Syracuse.hpp
test/xp/vector/: benchmark.py  benchmark.sh  dpu.cpp.in  host.cpp
test/xp/vector/results/: iterate.uint32_t.randaccess.csv  write.uint16_t.csv  write.uint32_t.csv  write.uint8_t.csv
