################################################################################
## BPL, the Process In Memory library for bioinformatics 
## date  : 2024
## author: edrezen
################################################################################

cmake_minimum_required(VERSION 3.13)

################################################################################
# Set some basic project attributes
################################################################################
project (org_pim_bpl VERSION 0.1 DESCRIPTION "PIM Library")

################################################################################
# The version number.
################################################################################
SET (BPL_VERSION_MAJOR 0)
SET (BPL_VERSION_MINOR 1)
SET (BPL_VERSION_PATCH 0)

################################################################################
# Define cmake modules directory
################################################################################

################################################################################
#  UNIT TESTS GENERATION 
################################################################################
IF (EXISTS "${PROJECT_SOURCE_DIR}/test")
	ADD_SUBDIRECTORY (test)
ENDIF()

################################################################################
#  DOCUMENTATION 
################################################################################
IF (EXISTS "${PROJECT_SOURCE_DIR}/doc")
    ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
ENDIF()

################################################################################
#  EXPORT 
################################################################################
IF (EXISTS "${PROJECT_SOURCE_DIR}/export")
    ADD_SUBDIRECTORY(export EXCLUDE_FROM_ALL)
ENDIF()
