################################################################################
## BPL, the Process In Memory library for bioinformatics 
## date  : 2023
## author: edrezen
################################################################################

################################################################################
#  UNIT TESTS GENERATION 
################################################################################
ADD_SUBDIRECTORY (unit)

################################################################################
#  BENCHMARK TESTS GENERATION 
################################################################################
#ADD_SUBDIRECTORY (benchmark)