################################################################################
## BPL, the Process In Memory library for bioinformatics 
## date  : 2023
## author: edrezen
################################################################################

################################################################################
# CONFIGURATION
################################################################################

# Now we can read the generic part.
#ADD_SUBDIRECTORY(syracuse)

ADD_SUBDIRECTORY(vector)